--- a/app/src/main/res/layout/list_item_favorites_live.xml
+++ b/app/src/main/res/layout/list_item_favorites_live.xml
@@ -3,14 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="130dp"
-    android:layout_height="wrap_content"
-    android:layout_margin="8dp"
+    android:layout_height="160dp"
+    android:layout_margin="08dp"
     app:cardCornerRadius="10dp"
     app:cardElevation="5dp"
     app:contentPadding="5dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/cl_offline_streamer"
+        android:id="@+id/cl_online_streamer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
@@ -38,11 +38,11 @@
             tools:text="Streamername" />
 
         <ImageView
-            android:id="@+id/iv_red_dot"
+            android:id="@+id/iv_green_dot"
             android:layout_width="10dp"
             android:layout_height="10dp"
             android:layout_marginEnd="5dp"
-            android:background="@drawable/red_dot"
+            android:background="@drawable/green_dot"
             app:layout_constraintBottom_toBottomOf="@+id/tv_streamername"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/tv_streamername" />
@@ -88,7 +88,7 @@
                     android:paddingBottom="2dp"
                     android:textAlignment="gravity"
                     android:textColor="@color/luckyv_white"
-                    android:textSize="10sp"
+                    android:textSize="11sp"
                     android:textStyle="normal"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -101,14 +101,12 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <ImageButton
+        <Button
             android:id="@+id/btn_favorites"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_marginStart="80dp"
             android:background="@drawable/grey_heart"
-            android:clickable="true"
-            android:focusable="true"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
