--- a/app/src/main/res/layout/list_item_live.xml
+++ b/app/src/main/res/layout/list_item_live.xml
@@ -88,7 +88,7 @@
                     android:paddingBottom="2dp"
                     android:textAlignment="gravity"
                     android:textColor="@color/luckyv_white"
-                    android:textSize="10sp"
+                    android:textSize="11sp"
                     android:textStyle="normal"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -103,14 +103,14 @@
 
         <ImageButton
             android:id="@+id/btn_favorites"
-            android:layout_width="20sp"
-            android:layout_height="20sp"
-            android:layout_marginStart="100dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="80dp"
+            android:background="@drawable/grey_heart"
             android:clickable="true"
-            android:text="Favorisieren"
+            android:focusable="true"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/grey_heart" />
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
