--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -183,11 +183,13 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_streamer_online"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="389dp"
                 android:layout_marginTop="5dp"
                 app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+                app:layout_constraintBottom_toTopOf="@id/navBar"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tv_streamers_online"
+                app:layout_constraintVertical_bias="0.0"
                 app:spanCount="3"
                 tools:listitem="@layout/list_item_live" />
 
@@ -207,17 +209,19 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_Streamer_offline"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="389dp"
                 android:layout_marginTop="5dp"
+                android:layout_marginBottom="499dp"
                 android:visibility="gone"
                 app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+                app:layout_constraintBottom_toTopOf="@id/navBar"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tv_streamers_offline"
                 app:spanCount="3"
                 tools:listitem="@layout/list_item_offline" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/constraintLayout"
+                android:id="@+id/navBar"
                 android:layout_width="match_parent"
                 android:layout_height="75dp"
                 android:layout_marginTop="424dp"
