--- a/app/src/main/res/layout/list_item_favorites_live.xml
+++ b/app/src/main/res/layout/list_item_favorites_live.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="130dp"
-    android:layout_height="160dp"
-    android:layout_margin="08dp"
+    android:layout_height="wrap_content"
+    android:layout_margin="8dp"
     app:cardCornerRadius="10dp"
     app:cardElevation="5dp"
     app:contentPadding="5dp">
