--- a/app/src/main/res/layout/list_item_offline.xml
+++ b/app/src/main/res/layout/list_item_offline.xml
@@ -101,7 +101,7 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <ImageButton
+        <androidx.appcompat.widget.AppCompatImageButton
             android:id="@+id/btn_favorites"
             android:layout_width="40dp"
             android:layout_height="40dp"
