--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -143,7 +143,7 @@
             app:layout_constraintTop_toBottomOf="@+id/cl_description">
 
             <Button
-                android:id="@+id/ib_filter"
+                android:id="@+id/btn_filter"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:backgroundTint="@color/luckyv_yellow"
@@ -151,11 +151,23 @@
                 android:textColor="@color/luckyv_black"
                 android:textSize="11sp"
                 app:cornerRadius="8dp"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.5" />
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <Spinner
+                android:id="@+id/dropDown_sort"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:autofillHints="test"
+                android:background="@android:color/darker_gray"
+                android:contentDescription="Select Filter"
+                android:spinnerMode="dropdown"
+                android:visibility="gone"
+                app:layout_constraintEnd_toEndOf="@+id/btn_filter"
+                app:layout_constraintStart_toStartOf="@+id/btn_filter"
+                app:layout_constraintTop_toBottomOf="@+id/btn_filter"
+                tools:ignore="TouchTargetSizeCheck" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -241,19 +253,3 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
-
-    <!--<Spinner-->
-    <!--android:id="@+id/s_dropDown"-->
-    <!--android:layout_width="0dp"-->
-    <!--android:layout_height="36dp"-->
-    <!--android:layout_marginStart="16dp"-->
-    <!--android:layout_marginEnd="2dp"-->
-    <!--android:layout_marginTop="16dp"-->
-    <!--android:background="@android:color/darker_gray"-->
-    <!--android:contentDescription="Select Film"-->
-    <!--android:spinnerMode="dropdown"-->
-    <!--app:layout_constraintEnd_toStartOf="@+id/ib_addFavorite"-->
-    <!--app:layout_constraintStart_toStartOf="parent"-->
-    <!--app:layout_constraintTop_toBottomOf="@+id/toolbar"-->
-    <!--tools:ignore="TouchTargetSizeCheck"-->
-    <!--android:autofillHints="test"/>-->
