--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -10,8 +10,8 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/btn_luckyv_yellow"
-        tools:context =".others.ui.SettingsFragment">
+        android:background="@color/luckyv_yellow"
+        tools:context=".others.ui.SettingsFragment">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/cl_app_header"
@@ -41,7 +41,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/cl_settings"
             android:layout_width="0dp"
-            android:layout_height="100dp"
+            android:layout_height="200dp"
             android:layout_marginStart="20dp"
             android:layout_marginTop="40dp"
             android:layout_marginEnd="20dp"
@@ -50,26 +50,85 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/cl_app_header">
 
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/cl_displaymodus"
-                android:layout_width="0dp"
-                android:layout_height="100dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.5"
+            <TextView
+                android:id="@+id/tv_displayModus"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/settings_mode"
+                android:textColor="@color/txt_luckyv_black"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="@+id/btn_lightmode"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+                app:layout_constraintTop_toTopOf="@+id/btn_lightmode" />
 
-                <TextView
-                    android:id="@+id/tv_displayModus"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/txt_luckyv_black"
-                    android:textSize="20sp"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    tools:text="Displaymodus" />
+            <Button
+                android:id="@+id/btn_lightmode"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="15dp"
+                android:backgroundTint="@color/btn_luckyv_yellow"
+                android:text="@string/settings_mode_light"
+                android:textColor="@color/txt_luckyv_black"
+                android:textSize="11sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toStartOf="@+id/btn_darkmode"
+                app:layout_constraintTop_toTopOf="parent" />
 
-            </androidx.constraintlayout.widget.ConstraintLayout>
+            <Button
+                android:id="@+id/btn_darkmode"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="5dp"
+                android:backgroundTint="@color/luckyv_black"
+                android:text="@string/settings_mode_dark"
+                android:textColor="@color/txt_luckyv_yellow"
+                android:textSize="11sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+
+            <TextView
+                android:id="@+id/tv_language"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="21dp"
+                android:text="@string/settings_de_language"
+                android:textColor="@color/txt_luckyv_black"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="@+id/btn_german"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/btn_german" />
+
+            <Button
+                android:id="@+id/btn_german"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:backgroundTint="@color/btn_luckyv_yellow"
+                android:text="@string/settings_de_language_deutsch"
+                android:textColor="@color/txt_luckyv_black"
+                android:textSize="11sp"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="@+id/btn_lightmode"
+                app:layout_constraintTop_toBottomOf="@+id/btn_lightmode" />
+
+            <Button
+                android:id="@+id/btn_english"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="5dp"
+                android:backgroundTint="@color/luckyv_black"
+                android:text="@string/settings_de_language_englisch"
+                android:textColor="@color/txt_luckyv_yellow"
+                android:textSize="11sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="@+id/btn_darkmode"
+                app:layout_constraintTop_toBottomOf="@+id/btn_darkmode" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
