--- a/app/src/main/res/layout/fragment_favorites.xml
+++ b/app/src/main/res/layout/fragment_favorites.xml
@@ -18,7 +18,6 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:text="Favorites"
-            android:textColor="@color/txt_luckyv_black"
             android:textSize="24sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -44,7 +43,7 @@
                 android:layout_marginTop="10dp"
                 android:backgroundTint="@color/btn_luckyv_yellow"
                 android:text="live"
-                android:textColor="@color/txt_luckyv_black"
+                android:textColor="@color/day_txt_luckyv_black"
                 android:textSize="11sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
@@ -69,7 +68,7 @@
                 android:layout_marginTop="10dp"
                 android:backgroundTint="@color/btn_luckyv_yellow"
                 android:text="offline"
-                android:textColor="@color/txt_luckyv_black"
+                android:textColor="@color/day_txt_luckyv_black"
                 android:textSize="11sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toEndOf="@+id/btn_streamers_live"
