--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -186,7 +186,7 @@
                 android:layout_marginTop="10dp"
                 android:backgroundTint="@color/btn_luckyv_yellow"
                 android:text="live"
-                android:textColor="@color/txt_luckyv_black"
+                android:textColor="@color/day_txt_luckyv_black"
                 android:textSize="11sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
@@ -211,7 +211,7 @@
                 android:layout_marginTop="10dp"
                 android:backgroundTint="@color/btn_luckyv_yellow"
                 android:text="offline"
-                android:textColor="@color/txt_luckyv_black"
+                android:textColor="@color/day_txt_luckyv_black"
                 android:textSize="11sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toEndOf="@+id/btn_streamers_live"
