--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -10,7 +10,6 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/luckyv_yellow"
         tools:context=".others.ui.SettingsFragment">
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -26,7 +25,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/header_settings"
-                android:textColor="@color/txt_luckyv_black"
                 android:textSize="24sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -55,7 +53,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/settings_mode"
-                android:textColor="@color/txt_luckyv_black"
                 android:textSize="20sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="@+id/btn_lightmode"
@@ -69,7 +66,7 @@
                 android:layout_marginEnd="15dp"
                 android:backgroundTint="@color/btn_luckyv_yellow"
                 android:text="@string/settings_mode_light"
-                android:textColor="@color/txt_luckyv_black"
+                android:textColor="@color/day_txt_luckyv_black"
                 android:textSize="11sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toStartOf="@+id/btn_darkmode"
@@ -95,7 +92,6 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="21dp"
                 android:text="@string/settings_de_language"
-                android:textColor="@color/txt_luckyv_black"
                 android:textSize="20sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="@+id/btn_german"
@@ -109,7 +105,7 @@
                 android:layout_marginTop="10dp"
                 android:backgroundTint="@color/btn_luckyv_yellow"
                 android:text="@string/settings_de_language_deutsch"
-                android:textColor="@color/txt_luckyv_black"
+                android:textColor="@color/day_txt_luckyv_black"
                 android:textSize="11sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="@+id/btn_lightmode"
