--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -64,7 +64,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="15dp"
-                android:backgroundTint="@color/btn_luckyv_yellow"
+                android:backgroundTint="@color/day_btn_luckyv_yellow"
                 android:text="@string/settings_mode_light"
                 android:textColor="@color/day_txt_luckyv_black"
                 android:textSize="11sp"
@@ -77,7 +77,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="5dp"
-                android:backgroundTint="@color/luckyv_black"
+                android:backgroundTint="@color/day_btn_luckyv_black"
                 android:text="@string/settings_mode_dark"
                 android:textColor="@color/txt_luckyv_yellow"
                 android:textSize="11sp"
@@ -103,7 +103,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:backgroundTint="@color/btn_luckyv_yellow"
+                android:backgroundTint="@color/day_btn_luckyv_yellow"
                 android:text="@string/settings_de_language_deutsch"
                 android:textColor="@color/day_txt_luckyv_black"
                 android:textSize="11sp"
@@ -117,7 +117,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="5dp"
-                android:backgroundTint="@color/luckyv_black"
+                android:backgroundTint="@color/day_btn_luckyv_black"
                 android:text="@string/settings_de_language_englisch"
                 android:textColor="@color/txt_luckyv_yellow"
                 android:textSize="11sp"
