--- a/app/src/main/res/layout/fragment_favorites.xml
+++ b/app/src/main/res/layout/fragment_favorites.xml
@@ -41,7 +41,7 @@
                 android:layout_height="35dp"
                 android:layout_marginStart="15dp"
                 android:layout_marginTop="10dp"
-                android:backgroundTint="@color/btn_luckyv_yellow"
+                android:backgroundTint="@color/day_btn_luckyv_yellow"
                 android:text="live"
                 android:textColor="@color/day_txt_luckyv_black"
                 android:textSize="11sp"
@@ -66,7 +66,7 @@
                 android:layout_height="35dp"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="10dp"
-                android:backgroundTint="@color/btn_luckyv_yellow"
+                android:backgroundTint="@color/day_btn_luckyv_yellow"
                 android:text="offline"
                 android:textColor="@color/day_txt_luckyv_black"
                 android:textSize="11sp"
