--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,7 +29,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="20dp"
-                android:text="@string/app_name"
+                android:text="@string/de_app_name"
                 android:textSize="24sp"
                 android:textStyle="bold"
                 android:visibility="invisible"
@@ -51,7 +51,7 @@
                 android:layout_marginEnd="10dp"
                 android:layout_marginBottom="5dp"
                 android:alpha="0"
-                android:contentDescription="@string/app_name"
+                android:contentDescription="@string/de_app_name"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
