--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -34,36 +34,36 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
-                android:text="@string/app_description_line1"
+                android:text="@string/de_app_description_line1"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:text="@string/app_description_line1" />
+                tools:text="@string/de_app_description_line1" />
 
             <TextView
                 android:id="@+id/tv_description2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:text="@string/app_description_line2"
+                android:text="@string/de_app_description_line2"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tv_description1"
-                tools:text="@string/app_description_line2" />
+                tools:text="@string/de_app_description_line2" />
 
             <TextView
                 android:id="@+id/tv_description3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/app_description_line3"
+                android:text="@string/de_app_description_line3"
                 android:textSize="13sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tv_description2"
-                tools:text="@string/app_description_line3" />
+                tools:text="@string/de_app_description_line3" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -122,7 +122,7 @@
                 android:layout_height="50dp"
                 android:completionHint="Suche nach Streamernamen"
                 android:completionThreshold="1"
-                android:hint="@string/suchbegriff"
+                android:hint="@string/de_suchbegriff"
                 android:inputType="text"
                 android:maxLines="1"
                 android:textSize="14sp"
@@ -145,7 +145,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:backgroundTint="@color/luckyv_yellow"
-                android:text="@string/sort_button"
+                android:text="@string/de_sort_button"
                 android:textColor="@color/luckyv_black"
                 android:textSize="11sp"
                 app:cornerRadius="8dp"
