--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -10,7 +10,7 @@
 
     <!--    todo: wenn tastatur eingeblendet, blende navBar aus-->
     <!--    todo: AutoCompleteTextView überarbeiten-->
-    <!--    todo: SettingsFragment erstellen-->
+    <!--    todo: com.abschlussapp.majateichmann.luckyvstreamerlist.others.ui.SettingsFragment erstellen-->
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/homeFragment"
