--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -27,12 +27,14 @@
                 android:text="@string/de_header_settings"
                 android:textSize="24sp"
                 android:textStyle="bold"
+                android:textColor="@color/luckyv_yellow"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.5" />
+                app:layout_constraintVertical_bias="0.5"/>
+<!--            android:textColor="?attr/colorOnPrimary"-->
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -53,6 +55,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/de_settings_mode"
+                android:textColor="?attr/colorOnPrimary"
                 android:textSize="20sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="@+id/btn_lightmode"
@@ -92,6 +95,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="21dp"
                 android:text="@string/settings_de_language"
+                android:textColor="?attr/colorOnPrimary"
                 android:textSize="20sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="@+id/btn_german"
