--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,9 @@
     <color name="day_txt_luckyv_black">#000000</color>
     <color name="night_txt_luckyv_white">#FFFFFF</color>
 
+    <color name="textColorPrimaryLight">#000000</color>
+    <color name="textColorPrimaryDark">#FFFFFF</color>
+
     //for buttons
     <color name="day_btn_luckyv_yellow">#FFC107</color>
     <color name="day_btn_luckyv_black">#000000</color>
@@ -14,7 +17,7 @@
     <color name="night_btn_luckyv_grey">#5A5A5A</color>
 
     //background
-    <color name="app_background_light">#FFFFFF</color>
+    <color name="app_background_day">#FFFFFF</color>
     <color name="app_background_dark">#000000</color>
 
     <color name="fraktion">#9A9790</color>
