--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -27,7 +27,7 @@
                 android:text="@string/de_header_settings"
                 android:textSize="24sp"
                 android:textStyle="bold"
-                android:textColor="@color/luckyv_yellow"
+                android:textColor="?attr/colorSecondary"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
@@ -55,7 +55,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/de_settings_mode"
-                android:textColor="?attr/colorOnPrimary"
+                android:textColor="?attr/colorSecondary"
                 android:textSize="20sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="@+id/btn_lightmode"
@@ -95,7 +95,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="21dp"
                 android:text="@string/settings_de_language"
-                android:textColor="?attr/colorOnPrimary"
+                android:textColor="?attr/colorSecondary"
                 android:textSize="20sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="@+id/btn_german"
