--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -16,5 +16,7 @@
         <item name="android:textColor">@color/luckyv_black</item>
 
         <item name="android:textColorPrimary">@color/textColorPrimaryLight</item>
+
+        <item name="colorButtonNormal">@color/day_btn_luckyv_black</item>
     </style>
 </resources>
